--- a/index.html
+++ b/index.html
@@ -19,6 +19,18 @@
     <section id="home">
         <h1>HI There,<span id="nama-orang"> ? </span></h1>
         <p>Terima kasih telah mengunjungi website ini, senang bertemu dengan Anda. Mari mengenal saya </p>
+        <div class="slide-container">
+            <div class="slide-row">
+                <div class="slide-column">
+                    <img src="/asset/3.jpeg" style="width:100%">
+                </div>
+            </div>
+            <div class="slide-row">
+                <div class="slide-column">
+                    <img src="/asset/4.jpg" style="width:100%">
+                </div>
+            </div>
+        </div> 
     </section>
     <hr>
     <!--home about-->
@@ -80,7 +92,7 @@
         <!--tombol-->
         <button type="send">Send Me</button>
     </form>
-    <script src="js/index.js"></script>
+    <script src="/js/index.js"></script>
     <hr>
     <!--footer-->
     <div class="footer">
